CHANGES.txt - 01/03/2000
------------------------

CHANGES IN CUPS V1.1.6

	- Fixed another possible DoS attack in httpGets()
	- Added check for "LANGUAGE = PCL" and "LANGUAGE =
	  POSTSCRIPT" in mime.types.
	- Resolution options were not being passed into the
	  filter programs properly.
	- The default compiler options for GCC no longer includ
	  "-g3", which apparently is deprecated in newer
	  versions of GCC.
	- CheckJobs() could cause cupsd to crash if a job is
	  cancelled in StartJob().
	- The printers.conf and classes.conf files are now
	  written with restricted permissions.
	- FindAvailablePrinter() would go into an infinite loop
	  if a class only contained 1 printer.
	- If LoadAllJobs() is unable to determine the file type
	  of a print job, assume "application/vnd.cups-raw".
	- The web interface now provides a job_printer_name
	  value for any corresponding job_printer_uri value.
	- The cups-lpd mini-daemon now logs the client address
	  and hostname as well as all commands and errors in the
	  syslog file.
	- The IPP backend now detects the supported file formats
	  and only specifies the document format if it is
	  supported.  This makes IPP printing to network print
	  servers and cards more reliable without affecting the
	  capabilities of CUPS servers.
	- The time_at_xyz attributes are now converted to human-
	  readable dates and times for the web interfaces.
	- The HP and EPSON sample drivers now correctly catch
	  signals and eject the current page when a job is
	  cancelled.
	- Fixed bug in CGI code - did not ignore control
	  characters (e.g. newlines) in form data.  This caused
	  sporatic web interface problems.


CHANGES IN CUPS V1.1.5-2

	- Fixed configure check for OpenSSL to work with RSA
	  code.
	- Added configure check for <sys/ioctl.h>, and use this
	  check in backend/serial.c.
	- Updated configure script handling of data,
	  configuration, and state directories to use datadir,
	  sysconfdir, and localstatedir variables.